{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 104,
  "lineage": "34475510-8d65-7240-2747-e4b4d37572c8",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "cosmic_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a33804afd4e08bd4",
            "arn": "arn:aws:ec2:il-central-1:248189900003:elastic-ip/eipalloc-0a33804afd4e08bd4",
            "association_id": "eipassoc-0437f5b9292c1b7e5",
            "domain": "vpc",
            "id": "eipalloc-0a33804afd4e08bd4",
            "instance": "i-0b226334a69e2bb2a",
            "network_border_group": "il-central-1",
            "network_interface": "eni-095dced493efd8ab3",
            "private_dns": "ip-10-0-1-130.il-central-1.compute.internal",
            "private_ip": "10.0.1.130",
            "public_dns": "ec2-51-85-13-77.il-central-1.compute.amazonaws.com",
            "public_ip": "51.85.13.77",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "cosmic-maplestory-eip"
            },
            "tags_all": {
              "Name": "cosmic-maplestory-eip"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_instance.cosmic_server",
            "aws_internet_gateway.cosmic_igw",
            "aws_security_group.cosmic_sg",
            "aws_subnet.cosmic_public_subnet",
            "aws_vpc.cosmic_vpc",
            "data.aws_ami.amazon_linux_2023",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "cosmic_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-087c52ee5abf134a2",
            "arn": "arn:aws:ec2:il-central-1:248189900003:instance/i-0b226334a69e2bb2a",
            "associate_public_ip_address": true,
            "availability_zone": "il-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b226334a69e2bb2a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "ms-tlv",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-095dced493efd8ab3",
            "private_dns": "ip-10-0-1-130.il-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.130",
            "public_dns": "ec2-51-84-246-221.il-central-1.compute.amazonaws.com",
            "public_ip": "51.84.246.221",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-053c68c0ee1872748",
                "volume_size": 50,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09e254c9d0b80108a",
            "tags": {
              "Name": "cosmic-maplestory-server"
            },
            "tags_all": {
              "Name": "cosmic-maplestory-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-068fd6b5e8d3ff259"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "user_data"
              }
            ]
          ],
          "dependencies": [
            "aws_security_group.cosmic_sg",
            "aws_subnet.cosmic_public_subnet",
            "aws_vpc.cosmic_vpc",
            "data.aws_ami.amazon_linux_2023",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "cosmic_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:il-central-1:248189900003:internet-gateway/igw-0bbff78d8493714c1",
            "id": "igw-0bbff78d8493714c1",
            "owner_id": "248189900003",
            "tags": {
              "Name": "cosmic-maplestory-igw"
            },
            "tags_all": {
              "Name": "cosmic-maplestory-igw"
            },
            "vpc_id": "vpc-09eeeb80b4ee44ccf"
          },
          "dependencies": [
            "aws_vpc.cosmic_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "cosmic_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:il-central-1:248189900003:route-table/rtb-0ae2447fd58edbb93",
            "id": "rtb-0ae2447fd58edbb93",
            "owner_id": "248189900003",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0bbff78d8493714c1",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "cosmic-maplestory-public-rt"
            },
            "tags_all": {
              "Name": "cosmic-maplestory-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-09eeeb80b4ee44ccf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.cosmic_igw",
            "aws_vpc.cosmic_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "cosmic_public_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0678eb93c81ff6dbd",
            "route_table_id": "rtb-0ae2447fd58edbb93",
            "subnet_id": "subnet-09e254c9d0b80108a"
          },
          "dependencies": [
            "aws_internet_gateway.cosmic_igw",
            "aws_route_table.cosmic_public_rt",
            "aws_subnet.cosmic_public_subnet",
            "aws_vpc.cosmic_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cosmic_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:il-central-1:248189900003:security-group/sg-068fd6b5e8d3ff259",
            "description": "Security group for Cosmic MapleStory server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-068fd6b5e8d3ff259",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "MapleStory Game Channels",
                "from_port": 7575,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 7577
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "MapleStory Login Server",
                "from_port": 8484,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8484
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "cosmic-maplestory-sg",
            "name_prefix": "",
            "owner_id": "248189900003",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "cosmic-maplestory-sg"
            },
            "tags_all": {
              "Name": "cosmic-maplestory-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-09eeeb80b4ee44ccf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.cosmic_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "cosmic_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:il-central-1:248189900003:subnet/subnet-09e254c9d0b80108a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "il-central-1a",
            "availability_zone_id": "ilc1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09e254c9d0b80108a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "248189900003",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cosmic-maplestory-public-subnet"
            },
            "tags_all": {
              "Name": "cosmic-maplestory-public-subnet"
            },
            "vpc_id": "vpc-09eeeb80b4ee44ccf"
          },
          "dependencies": [
            "aws_vpc.cosmic_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "cosmic_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:il-central-1:248189900003:vpc/vpc-09eeeb80b4ee44ccf",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0bed935b69d683dfb",
            "default_route_table_id": "rtb-0d6e4e2de1bf5c9ba",
            "default_security_group_id": "sg-04a4cc9bbdaa3463c",
            "dhcp_options_id": "dopt-0bb2f1ae131a62bce",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-09eeeb80b4ee44ccf",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d6e4e2de1bf5c9ba",
            "owner_id": "248189900003",
            "tags": {
              "Name": "cosmic-maplestory-vpc"
            },
            "tags_all": {
              "Name": "cosmic-maplestory-vpc"
            }
          }
        }
      ]
    }
  ]
}